--- a/public/css/coursespresentation.css
+++ b/public/css/coursespresentation.css
@@ -175,7 +175,27 @@ footer {
     font-family: 'Lato', sans-serif;
     font-weight: bold;
     font-size: 2rem;
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
+}
+
+.nav-comment-link {
+    text-decoration: none;
+    font-family: 'Lato', sans-serif;
+    font-weight: bold;
+    font-size: 1.2rem;
+    text-align: end;
+}
+
+.nav-link-comment {
+    color: #000;
+}
+
+.nav-link-comment:hover {
+    text-decoration: underline;
+    text-underline-offset: 4px;
+    text-decoration-thickness: 4px;
+    text-decoration-color: #181818;
+    color: #000;
 }
 
 .course-presentation-part-resume {
