--- a/public/css/news.css
+++ b/public/css/news.css
@@ -166,6 +166,11 @@ footer {
     color: white;
 }
 
+.article-title-text {
+    font-size: 1.1rem;
+    font-weight: bold;
+}
+
 .course-chapter-toggle-btn {
     font-weight: bold;
     font-size: 2rem;
